--- a/school_management/views/res_partner_view.xml
+++ b/school_management/views/res_partner_view.xml
@@ -69,150 +69,135 @@
             			<field name="active" invisible="1"/>
                     </div>
                 </xpath>
-                <xpath expr="//notebook" position="replace">
-                    <notebook>
-                        <page name="cycles_page" string="Cycles" attrs="{'invisible': [('student','=',False)]}">
-            				<field name="student_program_ids">
-                                <kanban quick_create="false" create="false">
-                                    <field name="uid"/>
-                                    <field name="year_id"/>
-                                    <field name="name"/>
-                                    <!-- <field name="total_acquiered_credits"/>
-                                    <field name="total_registered_credits"/>-->
-                                    <templates>
-                                      <t t-name="kanban-box">
-                                          <div style="position: relative; border-top : 10px solid #ffc107;">
-                                              <div class="oe_module_vignette">
-                                                <div class="row">
-                                                  <div class="col-12">
-                                                    <field name="uid"/>
-                                                  </div>
+                <xpath expr="//notebook" position="inside">
+                    <page name="cycles_page" string="Cycles" attrs="{'invisible': [('student','=',False)]}">
+                        <field name="student_program_ids">
+                            <kanban quick_create="false" create="false">
+                                <field name="uid"/>
+                                <field name="year_id"/>
+                                <field name="name"/>
+                                <!-- <field name="total_acquiered_credits"/>
+                                <field name="total_registered_credits"/>-->
+                                <templates>
+                                    <t t-name="kanban-box">
+                                        <div style="position: relative; border-top : 10px solid #ffc107;">
+                                            <div class="oe_module_vignette">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                <field name="uid"/>
                                                 </div>
-                                                <div class="row">
-                                                  <div class="col-12">
-                                                    <field name="source_program_id"/>
-                                                  </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12">
+                                                <field name="source_program_id"/>
                                                 </div>
-                                                <div class="row">
-                                                  <!-- <div class="col-6"> TODO add in evaluation
-                                                    ECTS acquis : <field name="total_acquiered_credits"/>
-                                                  </div>
-                                                  <div class="col-6">
-                                                    ECTS : <field name="total_registered_credits"/>
-                                                  </div> -->
+                                            </div>
+                                            <div class="row">
+                                                <!-- <div class="col-6"> TODO add in evaluation
+                                                ECTS acquis : <field name="total_acquiered_credits"/>
                                                 </div>
-                                                <div class="row">
-                                                  <div class="col-9">
-                                                  </div>
-                                                  <div class="col-3">
-                                                      <button type="object" name="action_open_form" class="oe_highlight btn btn-primary">Open</button>
-                                                  </div>
+                                                <div class="col-6">
+                                                ECTS : <field name="total_registered_credits"/>
+                                                </div> -->
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-9">
                                                 </div>
-                                              </div>
-                                          </div>
-                                      </t>
-                                    </templates>
-                                </kanban>
-                            </field>
-            			</page>
-                        <page name="program_page" string="PAEs" attrs="{'invisible': [('student','=',False)]}">
-            				<field name="student_bloc_ids">
-                                <kanban quick_create="false" create="false">
-                                    <field name="uid"/>
-                                    <field name="year_id"/>
-                                    <field name="name"/>
-                                    <field name="total_hours"/>
-                                    <field name="total_credits"/>
-                                    <templates>
-                                      <t t-name="kanban-box">
-                                          <div style="position: relative; border-top : 10px solid #28a745;">
-                                              <div class="oe_module_vignette">
-                                                <div class="row">
-                                                  <div class="col-12">
-                                                    <field name="uid"/>
-                                                  </div>
+                                                <div class="col-3">
+                                                    <button type="object" name="action_open_form" class="oe_highlight btn btn-primary">Open</button>
                                                 </div>
-                                                <div class="row">
-                                                  <div class="col-12">
-                                                    <field name="name"/>
-                                                  </div>
-                                                </div>
-                                                <div class="row">
-                                                  <div class="col-6">
-                                                    Heures : <field name="total_hours"/>
-                                                  </div>
-                                                  <div class="col-6">
-                                                    ECTS : <field name="total_credits"/>
-                                                  </div>
-                                                </div>
-                                                <div class="row">
-                                                  <div class="col-9">
-                                                  </div>
-                                                  <div class="col-3">
-                                                      <button type="object" name="action_open_form" class="oe_highlight btn btn-primary">Open</button>
-                                                  </div>
-                                                </div>
-                                              </div>
-                                          </div>
-                                      </t>
-                                    </templates>
-                                </kanban>
-                            </field>
-            			</page>
-                        <page string="Contacts &amp; Addresses" groups="school_management.group_employee">
-                            <field name="is_company" invisible="1"/>
-                            <field name="parent_id" invisible="1"/>
-                            <field name="type" attrs="{'invisible': [('parent_id','=', False)]}" groups="base.group_no_one"/>
-                            <div class="row" groups="school_management.group_employee">
-                                <div class="col-3 mb16">
-                                    <label for="street" string="Main Address"/>
-                                    <div class="o_address_format">
-                                        <div class="oe_edit_only">
-                                            <button name="open_parent" type="object" string="(edit)" class="oe_link"/>
+                                            </div>
+                                            </div>
                                         </div>
-                                        <field name="street" placeholder="Street..." class="o_address_street" />
-                                        <field name="street2" placeholder="Street 2..." class="o_address_street" />
-                                        <field name="city" placeholder="City" class="o_address_city" />
-                                        <field name="state_id" class="o_address_state" placeholder="State" options="{&quot;no_open&quot;: True}" on_change="onchange_state(state_id)"  context="{'country_id': country_id, 'zip': zip}"/>
-                                        <field name="zip" placeholder="ZIP" class="o_address_zip" />
-                                        <field name="country_id" placeholder="Country" class="o_address_country" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" />
+                                    </t>
+                                </templates>
+                            </kanban>
+                        </field>
+                    </page>
+                    <page name="program_page" string="PAEs" attrs="{'invisible': [('student','=',False)]}">
+                        <field name="student_bloc_ids">
+                            <kanban quick_create="false" create="false">
+                                <field name="uid"/>
+                                <field name="year_id"/>
+                                <field name="name"/>
+                                <field name="total_hours"/>
+                                <field name="total_credits"/>
+                                <templates>
+                                    <t t-name="kanban-box">
+                                        <div style="position: relative; border-top : 10px solid #28a745;">
+                                            <div class="oe_module_vignette">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                <field name="uid"/>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12">
+                                                <field name="name"/>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-6">
+                                                Heures : <field name="total_hours"/>
+                                                </div>
+                                                <div class="col-6">
+                                                ECTS : <field name="total_credits"/>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-9">
+                                                </div>
+                                                <div class="col-3">
+                                                    <button type="object" name="action_open_form" class="oe_highlight btn btn-primary">Open</button>
+                                                </div>
+                                            </div>
+                                            </div>
+                                        </div>
+                                    </t>
+                                </templates>
+                            </kanban>
+                        </field>
+                    </page>
+                    <page string="Contacts &amp; Addresses" groups="school_management.group_employee">
+                        <field name="is_company" invisible="1"/>
+                        <field name="parent_id" invisible="1"/>
+                        <field name="type" attrs="{'invisible': [('parent_id','=', False)]}" groups="base.group_no_one"/>
+                        <div class="row" groups="school_management.group_employee">
+                            <div class="col-3 mb16">
+                                <label for="street" string="Main Address"/>
+                                <div class="o_address_format">
+                                    <div class="oe_edit_only">
+                                        <button name="open_parent" type="object" string="(edit)" class="oe_link"/>
                                     </div>
-                                </div>
-                                <div class="col-3 mb16 ">
-                                    <label for="secondary_street" string="Alternative Address"/>
-                                    <div class="o_address_format">
-                                        <field name="secondary_street" placeholder="Street..." class="o_address_street" />
-                                        <field name="secondary_street2" placeholder="Street 2..." class="o_address_street" />
-                                        <field name="secondary_city" placeholder="City" class="o_address_city" />
-                                        <field name="secondary_state_id" class="o_address_state" placeholder="State" options="{&quot;no_open&quot;: True}" on_change="onchange_state(state_id)"  context="{'country_id': country_id, 'zip': zip}"/>
-                                        <field name="secondary_zip" placeholder="ZIP" class="o_address_zip" />
-                                        <field name="secondary_country_id" placeholder="Country" class="o_address_country" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" />
-                                    </div>
-                                </div>
-                                <div class="col-6 mb16">
-                                    <group col="2">
-                                        <field name='email_personnel' />
-                                        <field name="phone" widget="phone"/>
-                                        <field name="mobile" widget="phone"/>
-                                        <!--<field name="fax" widget="phone"/>-->
-                                    </group>
+                                    <field name="street" placeholder="Street..." class="o_address_street" />
+                                    <field name="street2" placeholder="Street 2..." class="o_address_street" />
+                                    <field name="city" placeholder="City" class="o_address_city" />
+                                    <field name="state_id" class="o_address_state" placeholder="State" options="{&quot;no_open&quot;: True}" on_change="onchange_state(state_id)"  context="{'country_id': country_id, 'zip': zip}"/>
+                                    <field name="zip" placeholder="ZIP" class="o_address_zip" />
+                                    <field name="country_id" placeholder="Country" class="o_address_country" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" />
                                 </div>
                             </div>
-                        </page>
-                        <page name="personal_information_page" string="Informations personnelles" groups="school_management.group_employee">
-            				<group name="personal_information_group">
-            				    <field name="title" options="{&quot;no_open&quot;: True}"/>
-            				    <field name="lang"/>
-            				    <field name='gender' />
-                                <!--<field name='nationality_id' />-->
-                                <field name='nationality_ids' widget="many2many_tags"/>
-                                <field name="birthplace"/>
-                                <field name="birthdate_date"/>
-                                <field name="reg_number" />
-                                <field name="mat_number"/>
-            				</group>
-            			</page>
-            		</notebook>
+                            <div class="col-3 mb16 ">
+                                <label for="secondary_street" string="Alternative Address"/>
+                                <div class="o_address_format">
+                                    <field name="secondary_street" placeholder="Street..." class="o_address_street" />
+                                    <field name="secondary_street2" placeholder="Street 2..." class="o_address_street" />
+                                    <field name="secondary_city" placeholder="City" class="o_address_city" />
+                                    <field name="secondary_state_id" class="o_address_state" placeholder="State" options="{&quot;no_open&quot;: True}" on_change="onchange_state(state_id)"  context="{'country_id': country_id, 'zip': zip}"/>
+                                    <field name="secondary_zip" placeholder="ZIP" class="o_address_zip" />
+                                    <field name="secondary_country_id" placeholder="Country" class="o_address_country" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" />
+                                </div>
+                            </div>
+                            <div class="col-6 mb16">
+                                <group col="2">
+                                    <field name='email_personnel' />
+                                    <field name="phone" widget="phone"/>
+                                    <field name="mobile" widget="phone"/>
+                                    <!--<field name="fax" widget="phone"/>-->
+                                </group>
+                            </div>
+                        </div>
+                    </page>
                 </xpath>
             </field>
         </record>
